Bugfix: notification form misalignment

--- a/app/assets/stylesheets/web/custom_forms.css.scss
+++ b/app/assets/stylesheets/web/custom_forms.css.scss
@@ -106,15 +106,6 @@
   color: #000;
 }
 
-.customStyle textarea.dataFormField {
-  width: 238px;
-}
-
-.modalDialog > div.customStyle {
-  //width: 350px;
-  //height: 400px;
-}
-
 #notificationContainer {
   padding-right: 30px;
 }
